...
            android:fontFamily="@font/redhatdisplay"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap"/>

    <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
...
            android:text="@string/start_date"
            android:textColor="#03A9F4"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
...
            android:text="@string/_2"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/filterPriorityButton3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="200dp"
            android:background="@drawable/priority_shape3"
...
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
...
            android:fontFamily="@font/redhatdisplay"
            android:text="@string/priority"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>

    <Button
            android:id="@+id/sortAZBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
...
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:onClick="sortOrderSelect"
            android:text="@string/ascending"/>

    <Button
            android:id="@+id/sortDescendingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="335dp"
            android:layout_marginEnd="25dp"
...
