<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:onClick="PopUp"
            app:srcCompat="@drawable/filter_icon"/>
</RelativeLayout>