<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/task_view_list"
        tools:context=".task_view.task_view_list.TaskViewList">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_button"

            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            tools:context=".task_view.task_view_list.TaskViewList"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="auto"

            android:clickable="true"
            app:borderWidth="0dp"
            android:elevation="16dp"
            app:srcCompat="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:backgroundTintMode="add"
            android:onClick="onButtonPress"
            />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleview_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"/>
</RelativeLayout>


